--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,13 +23,15 @@
     "build": "npm run clean && npm run copy && npm run compile",
     "clean": "rimraf dist && rimraf dist-transpiled && rimraf routing",
     "compile": "npm run tsc && rollup -c",
+    "cypress": "cypress run --headless --browser chrome",
     "release": "np --any-branch --yolo --no-release-draft",
     "lint": "tslint --project .",
     "lint.fix": "tslint --project . --fix",
     "tsc": "tsc -p .",
     "copy": "node scripts/copy.js",
     "test.spec": "jest --ci",
-    "test.treeshake": "node scripts/treeshaking.js dist/index.esm.js"
+    "test.treeshake": "node scripts/treeshaking.js dist/index.esm.js",
+    "e2e": "concurrently \"npm --prefix ./test-app run start\" \"wait-on http-get://localhost:3000 && npm run cypress\" --kill-others --success first"
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -39,9 +41,7 @@
     "css/"
   ],
   "dependencies": {
-    "@cypress/react": "^5.10.1",
-    "@cypress/webpack-dev-server": "^1.6.0",
-    "cypress": "^8.5.0",
+    "@ionic/core": "^5.8.2",
     "ionicons": "^5.1.2",
     "tslib": "*"
   },
@@ -50,6 +50,8 @@
     "react-dom": ">=16.8.6"
   },
   "devDependencies": {
+    "@cypress/react": "^5.10.1",
+    "@cypress/webpack-dev-server": "^1.6.0",
     "@rollup/plugin-node-resolve": "^8.1.0",
     "@rollup/plugin-virtual": "^2.0.3",
     "@testing-library/jest-dom": "^5.11.6",
@@ -59,6 +61,8 @@
     "@types/node": "^14.0.14",
     "@types/react": "16.14.0",
     "@types/react-dom": "^16.9.0",
+    "concurrently": "^6.3.0",
+    "cypress": "^8.5.0",
     "fs-extra": "^9.0.1",
     "jest": "^26.6.3",
     "np": "^6.4.0",
@@ -72,7 +76,8 @@
     "tslint": "^6.1.2",
     "tslint-ionic-rules": "0.0.21",
     "tslint-react": "^5.0.0",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "wait-on": "^6.0.0"
   },
   "jest": {
     "preset": "ts-jest",
