--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -85,6 +85,7 @@
       "<rootDir>/jest.setup.js"
     ],
     "testPathIgnorePatterns": [
+      "cypress",
       "node_modules",
       "dist-transpiled",
       "dist",
