--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -423,7 +423,7 @@ jobs:
           command: npm run sync
           working_directory: /tmp/workspace/packages/react/test-app
       - run:
-          command: CYPRESS_CACHE_FOLDER=/tmp/workspace/packages/react/test-app SKIP_PREFLIGHT_CHECK=true npm run e2e
+          command: SKIP_PREFLIGHT_CHECK=true npm run e2e
           working_directory: /tmp/workspace/packages/react
 
   install-react-router-test-app:
