--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  cypress: cypress-io/cypress@1.27.0
+  cypress: cypress-io/cypress@1.29.0
 
 aliases:
   - &restore-cache
@@ -142,7 +142,7 @@ jobs:
       - attach_workspace:
           at: /tmp/workspace
       - run:
-          command: npm install --legacy-peer-deps
+          command: CYPRESS_CACHE_FOLDER=/tmp/workspace/packages/react npm install --legacy-peer-deps
           working_directory: /tmp/workspace/packages/react
       - run:
           command: sudo npm link
@@ -406,7 +406,7 @@ jobs:
       - attach_workspace:
           at: /tmp/workspace
       - run:
-          command: CYPRESS_CACHE_FOLDER=/tmp/workspace/packages/react/test-app npm install
+          command: npm install
           working_directory: /tmp/workspace/packages/react/test-app
       - persist_to_workspace:
           root: /tmp/workspace
@@ -423,7 +423,7 @@ jobs:
           command: npm run sync
           working_directory: /tmp/workspace/packages/react/test-app
       - run:
-          command: SKIP_PREFLIGHT_CHECK=true npm run e2e
+          command: CYPRESS_CACHE_FOLDER=/tmp/workspace/packages/react SKIP_PREFLIGHT_CHECK=true npm run e2e
           working_directory: /tmp/workspace/packages/react
 
   install-react-router-test-app:
