--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,15 +23,13 @@
     "build": "npm run clean && npm run copy && npm run compile",
     "clean": "rimraf dist && rimraf dist-transpiled && rimraf routing",
     "compile": "npm run tsc && rollup -c",
-    "cypress": "cypress run --headless --browser chrome",
     "release": "np --any-branch --yolo --no-release-draft",
     "lint": "tslint --project .",
     "lint.fix": "tslint --project . --fix",
     "tsc": "tsc -p .",
     "copy": "node scripts/copy.js",
     "test.spec": "jest --ci",
-    "test.treeshake": "node scripts/treeshaking.js dist/index.esm.js",
-    "e2e": "concurrently \"npm --prefix ./test-app run start\" \"wait-on http-get://localhost:3000 && npm run cypress\" --kill-others --success first"
+    "test.treeshake": "node scripts/treeshaking.js dist/index.esm.js"
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -59,8 +57,6 @@
     "@types/node": "^14.0.14",
     "@types/react": "16.14.0",
     "@types/react-dom": "^16.9.0",
-    "concurrently": "^6.3.0",
-    "cypress": "^8.5.0",
     "fs-extra": "^9.0.1",
     "jest": "^26.6.3",
     "np": "^6.4.0",
@@ -74,8 +70,7 @@
     "tslint": "^6.1.2",
     "tslint-ionic-rules": "0.0.21",
     "tslint-react": "^5.0.0",
-    "typescript": "^3.9.5",
-    "wait-on": "^6.0.0"
+    "typescript": "^3.9.5"
   },
   "jest": {
     "preset": "ts-jest",
