--- a/.github/workflows/actions/test-vue-e2e/action.yml
+++ b/.github/workflows/actions/test-vue-e2e/action.yml
@@ -42,7 +42,7 @@ runs:
       shell: bash
       working-directory: ./packages/vue/test-app
     - name: Run Spec Tests
-      run: npm run test:spec
+      run: npm run test:unit
       shell: bash
       working-directory: ./packages/vue/test-app
     - name: Run E2E ests
