--- a/angular/package.json
+++ b/angular/package.json
@@ -73,6 +73,7 @@
     "eslint-plugin-import": "^2.25.2",
     "fs-extra": "^7.0.0",
     "ng-packagr": "^12.0.0",
+    "prettier": "^2.4.1",
     "rxjs": "^6.6.2",
     "typescript": "4.2.4",
     "typescript-eslint-language-service": "^4.1.5",
