--- a/.github/workflows/actions/test-react-router-e2e/action.yml
+++ b/.github/workflows/actions/test-react-router-e2e/action.yml
@@ -37,10 +37,9 @@ runs:
       run: npm install --legacy-peer-deps
       shell: bash
       working-directory: ./packages/react-router/test-app
-    - name: Run Tests
-      uses: cypress-io/github-action@v2
-        with:
-          browser: chrome
-          headless: true
-          start: npm run start
-          project: ./packages/react-router/test-app
+    - uses: cypress-io/github-action@v2
+      with:
+        browser: chrome
+        headless: true
+        start: npm run start
+        project: ./packages/react-router/test-app
