--- a/.github/workflows/upload-archive/action.yml
+++ b/.github/workflows/upload-archive/action.yml
@@ -11,7 +11,7 @@ runs:
   using: 'composite'
   steps:
     - name: Create Archive
-      run: zip -r ${{ inputs.output }} ${{ inputs.paths }}
+      run: zip -q -r ${{ inputs.output }} ${{ inputs.paths }}
       shell: bash
     - uses: actions/upload-artifact@v2
       with:
