--- a/.github/workflows/actions/build-core/action.yml
+++ b/.github/workflows/actions/build-core/action.yml
@@ -1,13 +1,14 @@
-name: 'Test Core Screenshot'
-description: 'Test Core Screenshot'
+name: 'Build Ionic Core'
+description: 'Build Ionic Core'
 runs:
   using: 'composite'
   steps:
+    - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
         node-version: 15.x
 
-    - name: Cache Core Node Modules
+    - name: Cache Node Modules
       uses: actions/cache@v2
       env:
         cache-name: core-node-modules
@@ -18,12 +19,16 @@ runs:
           ${{ runner.os }}-build-${{ env.cache-name }}-
           ${{ runner.os }}-build-
           ${{ runner.os }}-
-    - uses: ./.github/workflows/actions/download-archive
+    - name: Install Dependencies
+      run: npm ci
+      working-directory: ./core
+      shell: bash
+    - name: Build Core
+      run: npm run build -- --ci
+      working-directory: ./core
+      shell: bash
+    - uses: ./.github/workflows/actions/upload-archive
       with:
         name: ionic-core
-        path: ./core
-        filename: CoreBuild.zip
-    - name: Test
-      run: npx stencil test --e2e --screenshot --screenshot-connector=scripts/screenshot/ci.js --ci --no-build || true
-      shell: bash
-      working-directory: ./core
+        output: core/CoreBuild.zip
+        paths: core/dist core/components core/css core/hydrate core/loader
