--- a/packages/angular-server/package.json
+++ b/packages/angular-server/package.json
@@ -25,9 +25,8 @@
     "build": "ng-packagr -p package.json -c tsconfig.json",
     "build.prod": "npm run clean && npm run build",
     "clean": "rm -rf ./dist",
-    "lint": "echo linter disabled temporarily",
-    "lint.ts": "tslint --project .",
-    "lint.fix": "tslint --project . --fix"
+    "lint": "eslint . --ext .ts",
+    "lint.fix": "npm run lint -- --fix"
   },
   "ngPackage": {
     "lib": {
@@ -42,6 +41,7 @@
     "zone.js": ">=0.11.0"
   },
   "devDependencies": {
+    "@angular-eslint/eslint-plugin": "^12.6.1",
     "@angular/animations": "^12.0.0",
     "@angular/common": "^12.0.0",
     "@angular/compiler": "^12.0.0",
@@ -51,6 +51,10 @@
     "@angular/platform-browser-dynamic": "^12.2.10",
     "@angular/platform-server": "^12.0.0",
     "@ionic/core": "6.0.0-rc.1",
+    "@ionic/eslint-config": "^0.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "eslint": "^8.1.0",
+    "eslint-plugin-import": "^2.25.2",
     "ng-packagr": "^12.0.0",
     "typescript": "4.2.4"
   }
