--- a/packages/angular-server/package.json
+++ b/packages/angular-server/package.json
@@ -25,8 +25,10 @@
     "build": "ng-packagr -p package.json -c tsconfig.json",
     "build.prod": "npm run clean && npm run build",
     "clean": "rm -rf ./dist",
-    "lint": "eslint . --ext .ts",
-    "lint.fix": "npm run lint -- --fix"
+    "lint": "eslint . --ext .ts && npm run prettier -- --check",
+    "lint.fix": "eslint . --ext .ts --fix",
+    "prettier": "prettier \"**/*.ts\"",
+    "prettier.fix": "prettier \"**/*.ts\" --write"
   },
   "ngPackage": {
     "lib": {
@@ -52,10 +54,13 @@
     "@angular/platform-server": "^12.0.0",
     "@ionic/core": "6.0.0-rc.1",
     "@ionic/eslint-config": "^0.3.0",
+    "@ionic/prettier-config": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "eslint": "^8.1.0",
     "eslint-plugin-import": "^2.25.2",
     "ng-packagr": "^12.0.0",
+    "prettier": "^2.4.1",
     "typescript": "4.2.4"
-  }
+  },
+  "prettier": "@ionic/prettier-config"
 }
