--- a/.github/workflows/actions/test-react-e2e/action.yml
+++ b/.github/workflows/actions/test-react-e2e/action.yml
@@ -1,5 +1,5 @@
-name: 'Test React Router E2E'
-description: 'Test React Router '
+name: 'Test React E2E'
+description: 'Test React E2E'
 runs:
   using: 'composite'
   steps:
@@ -38,4 +38,4 @@ runs:
         browser: chrome
         headless: true
         start: npm run start.ci
-        working-directory: ./packages/react-router/test-app
+        working-directory: ./packages/react/test-app
