--- a/.github/workflows/actions/test-core-screenshot-main/action.yml
+++ b/.github/workflows/actions/test-core-screenshot-main/action.yml
@@ -24,6 +24,9 @@ runs:
         path: ./core
         filename: CoreBuild.zip
     - name: Test
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: npx stencil test --e2e --screenshot --screenshot-connector=scripts/screenshot/ci.js --ci --update-screenshot --no-build || true
       shell: bash
       working-directory: ./core
