--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,12 +45,12 @@ jobs:
     - run:
         name: Install headless Chrome dependencies
         command: |
-          sudo apt-get update && sudo apt-get install -yq \
+          sudo apt-get install -yq \
           gconf-service libasound2 libatk1.0-0 libatk-bridge2.0-0 libc6 libcairo2 libcups2 libdbus-1-3 \
-          libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libglib2.0-0 libnspr4 \
+          libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 \
           libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 \
           libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates \
-          fonts-liberation libappindicator1 libnss3-dev libgdk-pixbuf2.0-dev libgtk-3-dev libxss-dev lsb-release xdg-utils
+          fonts-liberation libappindicator1 libgbm-dev libnss3-dev libxss-dev lsb-release xdg-utils
     - run:
         name: Install Puppeteer with Chromium
         command: |
