--- a/core/package.json
+++ b/core/package.json
@@ -32,7 +32,7 @@
   ],
   "dependencies": {
     "@stencil/core": "~2.10.0",
-    "ionicons": "^5.5.1",
+    "ionicons": "^5.5.4-10",
     "tslib": "^2.1.0"
   },
   "devDependencies": {
