--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -57,8 +57,7 @@
     "vue-router": "^4.0.0-rc.4"
   },
   "dependencies": {
-    "@ionic/core": "6.0.0-rc.1",
-    "ionicons": "^5.1.2"
+    "@ionic/core": "6.0.0-rc.1"
   },
   "vetur": {
     "tags": "dist/vetur/tags.json",
