--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -18,4 +18,4 @@ jobs:
         run: npm run release.dev -- --skip-prompt
         shell: bash
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
