--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 15.x
+          registry-url: 'https://registry.npmjs.org'
       - name: Install Dependencies
         run: npm install
         shell: bash
@@ -21,4 +22,4 @@ jobs:
         run: npm publish --tag dev
         working-directory: ./core
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
