feat(angular): migrate to eslint

--- a/angular/package.json
+++ b/angular/package.json
@@ -34,8 +34,8 @@
     "clean": "node scripts/clean.js",
     "clean-generated": "node ./scripts/clean-generated.js",
     "lint": "npm run lint.ts",
-    "lint.ts": "tslint --project .",
-    "lint.fix": "tslint --project . --fix",
+    "lint.ts": "eslint -c .eslintrc.js --ext .ts ./src",
+    "lint.fix": "eslint -c .eslintrc.js --ext .ts ./src --fix",
     "prerelease": "npm run validate && np prerelease --yolo --any-branch --tag next",
     "test": "echo 'angular no tests yet'",
     "tsc": "tsc -p .",
@@ -62,6 +62,9 @@
     "@angular/forms": "8.2.13",
     "@angular/router": "8.2.13",
     "@types/node": "12.12.5",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.2.0",
     "fs-extra": "^7.0.0",
     "glob": "^7.1.4",
     "ng-packagr": "^9.1.5",
@@ -69,8 +72,6 @@
     "rollup-plugin-node-resolve": "~5.2.0",
     "rxjs": "^6.6.2",
     "tsickle": "^0.39.1",
-    "tslint": "^5.12.1",
-    "tslint-ionic-rules": "0.0.21",
     "typescript": "3.4.5",
     "zone.js": "^0.11.1"
   },
