fix(angular): use .eslintrc

--- a/angular/package.json
+++ b/angular/package.json
@@ -34,8 +34,8 @@
     "clean": "node scripts/clean.js",
     "clean-generated": "node ./scripts/clean-generated.js",
     "lint": "npm run lint.ts",
-    "lint.ts": "eslint -c .eslintrc.js --ext .ts ./src",
-    "lint.fix": "eslint -c .eslintrc.js --ext .ts ./src --fix",
+    "lint.ts": "eslint -c .eslintrc --ext .ts ./src",
+    "lint.fix": "eslint -c .eslintrc --ext .ts ./src --fix",
     "prerelease": "npm run validate && np prerelease --yolo --any-branch --tag next",
     "test": "echo 'angular no tests yet'",
     "tsc": "tsc -p .",
