chore(deps): fix package json

--- a/packages/angular-server/package.json
+++ b/packages/angular-server/package.json
@@ -37,7 +37,7 @@
   "peerDependencies": {
     "@angular/core": ">=8.2.7",
     "@angular/platform-server": ">=8.2.7",
-    "@ionic/angular": "*",
+    "@ionic/angular": "^5.9.2",
     "rxjs": ">=6.2.0",
     "zone.js": ">=0.8.26"
   },
