--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/ionic-team/ionic.git"
   },
   "scripts": {
-    "prepare": "npm run build",
+    "prepublishOnly": "npm run build",
     "build": "npm run clean && npm run compile",
     "clean": "rimraf dist dist-transpiled",
     "compile": "npm run tsc && rollup -c",
