--- a/.github/ionic-issue-bot.yml
+++ b/.github/ionic-issue-bot.yml
@@ -1,10 +1,19 @@
 triage:
-  label: triage
+  label: "holiday triage"
   removeLabelWhenProjectAssigned: true
   dryRun: false
 
 comment:
   labels:
+    - label: "holiday triage"
+      message: >
+        Thanks for the issue! This issue has been labeled as `holiday triage`. With the winter holidays quickly approaching, much of the Ionic Team will soon be taking time off. During this time, issue triaging and PR review will be delayed until the team begins to return. After this period, we will work to ensure that all new issues are properly triaged and that new PRs are reviewed.
+
+
+        In the meantime, please read our [Winter Holiday Triage Guide](https://github.com/ionic-team/ionic-framework/issues/22699) for information on how to ensure that your issue is triaged correctly.
+
+
+        Thank you!
     - label: "help wanted"
       message: >
         This issue has been labeled as `help wanted`. This label is added to issues
@@ -41,7 +50,8 @@ closeAndLock:
     - label: "ionitron: support"
       message: >
         Thanks for the issue! This issue appears to be a support request. We use this issue tracker exclusively for
-        bug reports and feature requests. Please use our [forum](https://forum.ionicframework.com) for questions about the framework.
+        bug reports and feature requests. Please use our [forum](https://forum.ionicframework.com) or our
+        [slack channel](https://ionicworldwide.herokuapp.com/) for questions about the framework.
 
 
         Thank you for using Ionic!
