mark packages as eslint root, added echos

--- a/packages/vue-router/package.json
+++ b/packages/vue-router/package.json
@@ -66,5 +66,15 @@
       "json",
       "jsx"
     ]
+  },
+  "eslintConfig": {
+    "root": true,
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module"
+    },
+    "env": {
+      "es6": true
+    }
   }
 }
