Added sync-dev script to copy transpiled code. Code formated and fix ion events

--- a/packages/vue-router/package.json
+++ b/packages/vue-router/package.json
@@ -16,7 +16,8 @@
   "module": "./dist/index.esm.js",
   "types": "./dist/types/index.d.ts",
   "files": [
-    "dist/"
+    "dist/",
+    "dist-transpiled/"
   ],
   "repository": {
     "type": "git",
