--- a/.github/workflows/actions/test-react-router-e2e/action.yml
+++ b/.github/workflows/actions/test-react-router-e2e/action.yml
@@ -29,13 +29,9 @@ runs:
         name: ionic-react-router
         path: ./packages/react-router
         filename: ReactRouterBuild.zip
-    - name: Sync Built Changes
-      run: npm run sync
-      shell: bash
-      working-directory: ./packages/react-router/test-app
     - uses: cypress-io/github-action@v2
       with:
         browser: chrome
         headless: true
-        start: npm run start.ci
+        start: npm run sync && npm run start.ci
         working-directory: ./packages/react-router/test-app
