chore(lint): install eslint

--- a/core/package.json
+++ b/core/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@axe-core/puppeteer": "^4.3.2",
+    "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^2.0.0",
     "@jest/core": "^26.6.3",
     "@rollup/plugin-node-resolve": "^8.4.0",
@@ -48,9 +49,12 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.6.0",
     "@types/swiper": "5.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "aws-sdk": "^2.738.0",
     "clean-css-cli": "^4.1.11",
     "domino": "^2.1.6",
+    "eslint": "^7.32.0",
     "execa": "^5.0.0",
     "fs-extra": "^9.0.1",
     "jest": "^26.4.1",
