chore(): make prettier and eslint play nice

--- a/core/package.json
+++ b/core/package.json
@@ -55,6 +55,7 @@
     "clean-css-cli": "^4.1.11",
     "domino": "^2.1.6",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
     "execa": "^5.0.0",
     "fs-extra": "^9.0.1",
     "jest": "^26.4.1",
