--- a/core/package.json
+++ b/core/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@axe-core/puppeteer": "^4.3.2",
+    "@ionic/prettier-config": "^2.0.0",
     "@jest/core": "^26.6.3",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "@rollup/plugin-virtual": "^2.0.3",
@@ -56,6 +57,7 @@
     "jest-cli": "^26.4.1",
     "np": "^6.4.0",
     "pixelmatch": "4.0.2",
+    "prettier": "^2.6.1",
     "puppeteer": "^10.4.0",
     "rollup": "^2.26.4",
     "sass": "^1.26.10",
@@ -86,6 +88,7 @@
     "lint.ts.fix": "tslint --project . --fix",
     "prerelease": "npm run validate && np prerelease --yolo --any-branch --tag next",
     "prerender.e2e": "node scripts/testing/prerender.js",
+    "prettier": "prettier \"./src/**/*.{html,ts,tsx,js,jsx}\"",
     "start": "npm run build.css && stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e --max-workers=2",
     "test.spec": "stencil test --spec --max-workers=2",
@@ -109,5 +112,6 @@
   "homepage": "https://ionicframework.com/",
   "jest": {
     "preset": "@stencil/core/testing"
-  }
+  },
+  "prettier": "@ionic/prettier-config"
 }
